# binaric

./: .ocamlformat  binaric.opam  dune-project  readme.md
examples/: rgb.bmp.bn
lib/: .merlin  args.ml  args.mli  ast.ml  binaric.ml  dune  eval.ml  lib.ml  link.ml  parse.ml  util.ml
test/: .merlin  dune  ff.bn  test.ml
test/dir/: inc_a.bn  inc_test.bn
