opam-version: "2.0"
name: "binaric"
synopsis: "A friendly language for building binary files"
description: """
Binaric is a dsl for manually constructing binary files such as images etc.
"""
maintainer: "rymdhund@riseup.net"
authors: "rymdhund@riseup.net"
license: "ISC"
homepage: "https://github.com/rymdhund/"
bug-reports: "https://github.com/rymdhund/issues"

depends: [
  "ocaml"
  "angstrom"
  "angstrom-unix"
  "containers"
  "ppx_deriving"
  "dune" {build}
  "alcotest" {with-test}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
